--- a/mediapp-backend/pom.xml
+++ b/mediapp-backend/pom.xml
@@ -31,7 +31,13 @@
             <groupId>com.fasterxml.jackson.dataformat</groupId>
             <artifactId>jackson-dataformat-xml</artifactId>
         </dependency>  -->
-
+<!-- 		Apartir de Springboot 2.3 es necesario agregar esta dependencia -->
+		<dependency>
+		    <groupId>org.springframework.boot</groupId>
+		    <artifactId>spring-boot-starter-validation</artifactId>
+		    <version>2.5.1</version>
+		</dependency>
+				
 		<dependency>
 			<groupId>org.postgresql</groupId>
 			<artifactId>postgresql</artifactId>
